# nanographrag

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: ubuntu.yml
examples/: demo_en.py  demo_sanguo.py  demo_zh.py
graphrag_lite/: __init__.py  core.py  prompts.py  utils.py
tests/: test_graphrag.py
