[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-lite"
version = "0.1.3"
description = "A minimal GraphRAG implementation in ~600 lines of Python code"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Xu Ming", email = "xuming624@qq.com"}
]
keywords = ["graphrag", "rag", "knowledge-graph", "llm", "nlp", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/shibing624/graphrag-lite"
Repository = "https://github.com/shibing624/graphrag-lite"
Documentation = "https://github.com/shibing624/graphrag-lite#readme"
Issues = "https://github.com/shibing624/graphrag-lite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphrag_lite*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
